--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     // QueryDSL
     implementation 'io.github.openfeign.querydsl:querydsl-jpa:6.11'
     annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:6.11:jpa'
+
+    //spring-test
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
